--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "steering",
-  "version": "0.0.1",
-  "description": "2D vector based steering behaviors",
+  "version": "0.0.2",
+  "description": "2D vector based steering behaviors. Based on Craig Reynolds' Steering Behaviors For Autonomous Characters",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -9,7 +9,8 @@
   "keywords": [
     "game",
     "pathfinding",
-    "steering"
+    "steering",
+    "2D movement"
   ],
   "author": "kevzettler",
   "license": "MIT",
